# tyrnak

./: .gitignore  Cargo.toml
crates/app_client/: Cargo.toml
crates/app_client/src/: main.rs
crates/app_server/: Cargo.toml
crates/app_server/src/: bootstrap.rs  brokers.rs  config.rs  console.rs  inspector.rs  main.rs  messages.rs  supervisor.rs  validation.rs
crates/app_server/src/services/: mod.rs  network_service.rs  simulation_service.rs
crates/core_assets/: Cargo.toml
crates/core_assets/src/: handle.rs  lib.rs  loader.rs  store.rs  watcher.rs
crates/core_audio/: Cargo.toml
crates/core_audio/src/: engine.rs  lib.rs  stub.rs
crates/core_devui/: Cargo.toml
crates/core_devui/src/: lib.rs  panel.rs  registry.rs
crates/core_devui/src/panels/: entity_list.rs  fps.rs  mod.rs
crates/core_inspect/: Cargo.toml
crates/core_inspect/src/: lib.rs
crates/core_math/: Cargo.toml
crates/core_math/src/: lib.rs  primitives.rs  transform.rs  utils.rs
crates/core_net/: Cargo.toml
crates/core_net/src/: channel.rs  client.rs  lib.rs  server.rs  types.rs
crates/core_physics/: Cargo.toml
crates/core_physics/src/: lib.rs
crates/core_platform/: Cargo.toml
crates/core_platform/src/: config.rs  events.rs  input.rs  lib.rs
crates/core_proto/: Cargo.toml
crates/core_proto/src/: commands.rs  events.rs  ids.rs  lib.rs  snapshot.rs
crates/core_render/: Cargo.toml
crates/core_render/src/: backend.rs  camera.rs  lib.rs  null_renderer.rs  wgpu_renderer.rs
crates/core_runtime/: Cargo.toml
crates/core_runtime/src/: broker.rs  control.rs  health.rs  lib.rs  lifecycle.rs  runtime_host.rs  service.rs  thread_bridge.rs  thread_handle.rs  tick_loop.rs
crates/core_runtime/src/dataflow/: control.rs  latest.rs  mod.rs  policy.rs  queue.rs  stream.rs
crates/game_core/: Cargo.toml
crates/game_core/src/: collision.rs  command.rs  component.rs  entity.rs  event.rs  lib.rs  snapshot.rs  tick.rs  world.rs
crates/game_core/src/effects/: application.rs  mod.rs  processing.rs  registry.rs  types.rs
crates/game_core/src/rules/: ability.rs  command.rs  damage.rs  item.rs  mod.rs  registry.rs  stats.rs
crates/game_core/src/state/: mod.rs  queues.rs
crates/game_core/src/systems/: ability_system.rs  combat_system.rs  command_system.rs  damage_system.rs  death_system.rs  effect_system.rs  item_system.rs  mod.rs  movement_system.rs
crates/game_moba/: Cargo.toml
crates/game_moba/src/: lib.rs  registry.rs
crates/game_moba/src/abilities/: mod.rs  registry.rs
crates/game_moba/src/content/: mod.rs
crates/game_moba/src/effects/: mod.rs  silence.rs  slow.rs  stun.rs
crates/game_moba/src/items/: mod.rs  registry.rs
crates/tool_inspector/: Cargo.toml
crates/tool_inspector/src/: lib.rs
docs/: ARCHITECTURE.md  CODEBASE_OVERVIEW.md
