[workspace]
resolver = "2"
members = [
    "crates/core_math",
    "crates/core_proto",
    "crates/core_platform",
    "crates/core_runtime",
    "crates/core_render",
    "crates/core_assets",
    "crates/core_audio",
    "crates/core_net",
    "crates/core_physics",
    "crates/core_inspect",
    "crates/core_devui",
    "crates/tool_inspector",
    "crates/game_core",
    "crates/game_moba",
    "crates/app_client",
    "crates/app_server",
]

[workspace.dependencies]
# Math
glam = { version = "0.32.1", features = ["serde"] }

# Graphics / Platform
wgpu = "29.0.0"
winit = "0.31.0-beta.2"

# Networking
renet = "2.0.0"
renetcode = "2.0.0"

# Serialization
postcard = { version = "1.1.3", features = ["alloc"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Physics
rapier3d = { version = "0.32.0", features = ["simd-stable"] }

# Debug UI
egui = "0.33.3"
eframe = "0.33.3"
egui-wgpu = "0.33.3"
egui-winit = "0.33.3"

# Audio
kira = "0.12.0"

# Concurrency / Threading
kanal = "0.1.1"
papaya = "0.2.3"

# Diagnostics
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# Asset hot-reload
notify = "9.0.0-rc.2"

# Internal crates
core_math = { path = "crates/core_math" }
core_proto = { path = "crates/core_proto" }
core_platform = { path = "crates/core_platform" }
core_runtime = { path = "crates/core_runtime" }
core_render = { path = "crates/core_render" }
core_assets = { path = "crates/core_assets" }
core_audio = { path = "crates/core_audio" }
core_net = { path = "crates/core_net" }
core_physics = { path = "crates/core_physics" }
core_inspect = { path = "crates/core_inspect" }
core_devui = { path = "crates/core_devui" }
tool_inspector = { path = "crates/tool_inspector" }
game_core = { path = "crates/game_core" }
game_moba = { path = "crates/game_moba" }

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
