[package]
name = "core_render"
description = "GPU rendering engine — wgpu backend, render pipeline, RenderBackend trait"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
core_math = { workspace = true }
core_proto = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
glam = { workspace = true }
tracing = { workspace = true }
bytemuck = { version = "1.25", features = ["derive"] }
