[package]
name = "tool_inspector"
description = "Live runtime inspector window for traces, threads, and spans"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
core_inspect = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
tracing = { workspace = true }
